--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -23,7 +23,7 @@
                             <div id="hide" class="form-group big-form-file">
                                 {{ form.file(id="file", class="inputfile", data_multiple_caption="{count} files selected") }}
                             <p class="ct-fw-300 ct-u-motiveLight">
-                                Выбtрите несколько тегов к вашему посту (напр."мой аквариум", "аквариум своими руками")
+                                Выберите несколько тегов к вашему посту (напр."мой аквариум", "аквариум своими руками")
 
                             </p>
 
