--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,9 @@
         <script src="{{ url_for ('static', filename= "js/cropper.js") }}"></script>
 
             <script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>
+                <script type="text/javascript" src="{{ url_for ('static', filename= "js/moment.min.js") }}"></script>
+
+
 
         <script type="text/javascript" src="{{ url_for ('static', filename= "js/bootstrap.min.js") }}"></script>
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/snap.js") }}"></script>
