facebook auto posting, feedback form

--- a/templates/base.html
+++ b/templates/base.html
@@ -232,8 +232,7 @@
                 <div class="ct-list ct-list--dark">
                     <h5 class="text-uppercase ct-fw-600 ct-u-motiveBody">Найдите нас</h5>
                     <ul class="ct-u-paddingTop10">
-                        <li><a href="#"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-facebook"></i></div></div><span>Facebook</span></a></li>
-                        <li><a href="#"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-linkedin"></i></div></div><span>Linkedin</span></a></li>
+                        <li><a href="https://www.facebook.com/AquariumForum/"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-facebook"></i></div></div><span>Facebook</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -241,8 +240,8 @@
                 <div class="ct-list ct-list--dark">
                     <h5 class="text-uppercase ct-fw-600 ct-u-motiveBody">Свяжитесь с нами</h5>
                     <ul class="ct-u-paddingTop10">
-                        <li><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-home"></i></div></div><span>Винница</span></li>
-                        <li><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-phone"></i></div></div><span>093-175-88-43</span></li>
+                        <li><a href="{{ url_for("contact_us") }}"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-envelope"></i></div></div><span>обратная связь</span></a></li>
+
                         <li><a href="#"><div class="ct-listTable"><div class="ct-ListDiamond"><i class="fa fa-envelope"></i></div></div><span>contact.me@aqua.name</span></a></li>
                     </ul>
                 </div>
