--- a/static/style/style.css
+++ b/static/style/style.css
@@ -354,7 +354,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 }
 .form-group {
     position: relative;
-    margin-bottom: 20px;
 }
 
 .ct-mediaList li a p, .ct-mediaList li p {
@@ -1540,12 +1539,11 @@ img.liked, img.unliked, .popup-div img{
 
 
 .reaction-counter img {
-    width: 25px;
-    box-shadow:-3px 1px 1px rgba(0, 0, 0, 0.2);
+    width: 19px;
     border-radius: 16px !important;
 }
 .comment-under-box .reaction-counter img {
-    width: 25px;
+    width: 19px;
 }
 .ct-product img.smile {
     width: 25px;
@@ -3954,4 +3952,71 @@ a.hoover-blue:hover{
     text-decoration: none;
     color: #1f8bf3;
 
+}
+
+
+/* Customize the label (the container) */
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px !important;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+  left: 9px;
+  top: 0px;
+  width: 11px;
+  height: 20px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
