--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
                     <form action="" method="post" class="form-horizontal" enctype=multipart/form-data >
-                        <div class="form-group">
+                        <div class="form-group ct-u-marginBottom0">
                             {{ form.hidden_tag() }}
                             {{ render_field_with_errors(form.title, class="form-control") }}
                             {{ render_field_with_errors(form.body, class="form-control", contenteditable="true") }}
@@ -49,12 +49,23 @@
                                 </label>
                             </div>
                             </div>
+
                         </div>
+
+
                         <div class="control-group">
                             <div class="controls">
+
                                 <button type="submit" class="btn btn-motive btn-form">создать</button>
                             </div>
                         </div>
+                     <label class="checkbox-container">
+                            Опубликовать этот пост анонимно на <a href="https://www.facebook.com/AquariumForum/">странице форума в facebook</a>?
+
+                                {{(form.facebook_post) }}
+                            <span class="checkmark"></span>
+
+                            </label>
 
 
                     </form>
