--- a/templates/user.html
+++ b/templates/user.html
@@ -55,7 +55,7 @@
              {% endif %}
         {% endif %}
 
-            {% if user.last_seen %}
+            {% if user.last_seen and current_user != user%}
                 <p><i>Был онлайн: {{momentjs(user.last_seen).calendar()}}</i></p>
             {% endif %}
             <p class="ct-u-paddingBottom5">
@@ -65,7 +65,10 @@
             {% if user.about_me %}
                 <p>{{ user.about_me }}</p>
              {% else %}
+                {% if current_user == user %}
+
                 <p>Хотите что-нибудь рассказать о себе?</p>
+                    {% endif %}
             {% endif %}
                 {% if current_user == user %}
 
@@ -77,7 +80,6 @@
         </div>
 
 
-    {% if current_user == user %}
         <section class="ct-u-paddingBoth20">
         <div class="row">
 
@@ -205,7 +207,6 @@
             </div>
 
 
-    {% endif %}
         </section>
     </div>
 
