--- a/templates/user_container/user_contain_comment.html
+++ b/templates/user_container/user_contain_comment.html
@@ -41,9 +41,12 @@
 
 
 {% else %}
+    {% if current_user == user %}
     <p>Вы еще ничего не прокомментировали</p>
     <p>Хотите что-нибудь <a href="{{ url_for('last_posts') }}">почитать</a>?</p>
-
+    {% else %}
+        <p>Этот форумчанин еще не комментировал посты</p>
+    {% endif %}
 {% endif %}
 </div>
 
