--- a/templates/user_container/user_contain_post.html
+++ b/templates/user_container/user_contain_post.html
@@ -45,9 +45,12 @@
 
     </div>
 {% else %}
-    <p>Вы еще не создавали постов</p>
-    <p>Хотите о чем-нибудь <a href="{{ url_for('add_post') }}">написать</a>?</p>
-
+    {% if current_user == user %}
+        <p>Вы еще не создавали постов</p>
+        <p>Хотите о чем-нибудь <a href="{{ url_for('add_post') }}">написать</a>?</p>
+    {% else %}
+        <p>Этот форумчанин еще не писал посты</p>
+    {% endif %}
 {% endif %}
 
 
