--- a/templates/user_container/user_contain_prod_saved.html
+++ b/templates/user_container/user_contain_prod_saved.html
@@ -38,9 +38,13 @@
 
 
 {% else %}
+        {% if current_user == user %}
+
     <p>В избранных пока пусто. <a href="{{ url_for('popular_product') }}">Посмотрите последние продукты </a>,
         может, вас что-то заинтересует.</p>
-
+{% else %}
+        <p>Этот форумчанин еще не добавил избранное</p>
+    {% endif %}
 
             {% endif %}
 
