--- a/templates/user.html
+++ b/templates/user.html
@@ -110,8 +110,8 @@
                                     Комменты
                                 </h4>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li id="date" class="comment_block" rel_obj="comment" user="{{ user.id }}"><a href="#">к постам</a></li>
-                                    <li id="date" class ="comment_block" rel_obj="prod_comment" user="{{ user.id }}"><a href="#">к продуктам</a></li>
+                                    <li id="date" class="comment_block" rel_obj="comment" user="{{ user.id }}">к постам</li>
+                                    <li id="date" class ="comment_block" rel_obj="prod_comment" user="{{ user.id }}">к продуктам</li>
                                 </ul>
                         </div>
                         </div>
@@ -198,9 +198,13 @@
 
                                         </div>
                                     {% else %}
+                                    {% if current_user == user %}
+
                                         <p>Вы еще не создавали посты</p>
                                         <p>Хотите <a href="{{ url_for('add_post') }}">написать</a>  что-нибудь?</p>
-
+{% else %}
+        <p>Этот форумчанин еще не публиковал посты</p>
+    {% endif %}
                                     {% endif %}
                     </div>
                 </div>
