--- a/templates/user_container/user_contain_post_saved.html
+++ b/templates/user_container/user_contain_post_saved.html
@@ -40,8 +40,11 @@
     </div>
 
 {% else %}
+    {% if current_user == user %}
     <p>В избранных пока пусто. <a href="{{ url_for('last_posts') }}">Почитайте последние посты </a>, может, вас что-то заинтересует.</p>
-
+    {% else %}
+        <p>Этот форумчанин еще не добавил избранное</p>
+    {% endif %}
 {% endif %}
 <script>
 $(document).ready(function() {
