--- a/templates/user_container/user_contain_prod_comment.html
+++ b/templates/user_container/user_contain_prod_comment.html
@@ -36,8 +36,12 @@
         {% endif %}
     {% endfor %}
 {% else %}
+    {% if current_user == user %}
     <p>Вы еще ничего не прокомметировали</p>
     <p>Хотите что-нибудь <a href="{{url_for('popular_product')}}">почитать</a>?</p>
+        {% else %}
+        <p>Этот форумчанин еще не комментировал продукты</p>
+    {% endif %}
 
 {% endif %}
 
